--- a/index.html
+++ b/index.html
@@ -79,162 +79,12 @@
 		  <br>
           <h4>Bem-vindo(a) à Eng&Service.</h4>
 		  <p>
-		  Somos a Eng&Service, prestamos serviço de <b>engenharia elétrica</b>, prezando sempre pela qualidade e satisfação dos clientes. Como podemos ajudar?
-		  Atuamos há 18 anos no mercado de engenharia elétrica prestando serviços de excelência, prezando pela qualidade dos projetos e satisfação de nossos clientes.
+		  Somos a <b>Eng&Service</b>, estamos há três anos no mercado, com uma equipe formada por profissionais habilidosos e com uma vasta experiência na área elétrica. 
+		  Dentre os nossos principais ramos de atuação, estão: <i>condomínios</i> residenciais e comerciais, pequenas e médias indústrias, órgãos públicos, supermercados, entre outros.
+		  <br>Já realizamos inúmeros projetos com <i>aprovação</i> da concessionária quando se tratam de padrão de entrada e subestação, e aprovação do corpo de bombeiros quando se tratam de combate a incêndio e pânico, SPDA e AVCB.
+		Prezamos sempre pela qualidade dos projetos e satisfação de nossos clientes. <b>Como podemos te ajudar</b>?
         </div>
 
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
-                </ul>
-              </div>
-            </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End sobre Section -->
-
-    <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="count-box">
-              <i class="icofont-simple-smile"></i>
-              <span data-toggle="counter-up">232</span>
-              <p>Happy Clients</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-            <div class="count-box">
-              <i class="icofont-document-folder"></i>
-              <span data-toggle="counter-up">521</span>
-              <p>Projects</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-live-support"></i>
-              <span data-toggle="counter-up">1,463</span>
-              <p>Hours Of Support</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-            <div class="count-box">
-              <i class="icofont-users-alt-5"></i>
-              <span data-toggle="counter-up">15</span>
-              <p>Hard Workers</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-	
     <!-- ======= servicos Section ======= -->
     <section id="servicos" class="servicos">
       <div class="container" data-aos="fade-up">
@@ -272,7 +122,7 @@
                 <i class='bx bxs-file' style='color:#1880ad'></i>
               </div>
               <h4>LAUDO PERICIAL<br> DAS INSTALAÇÕES ELÉTRICAS</h4>
-              <p>Por motivos legais e de segurança, é importante possuir um laudo pericial das instalações assinado por um <b>engenheiro elétrico</b> registrado no CREA.<br> A <b>Eng&Service</b> conta com profissionais qualificados para o trabalho.</p>
+              <p>Por motivos legais e de segurança, é importante possuir um laudo pericial das instalações assinado por um <b>engenheiro elétricista</b> registrado no CREA.<br> A <b>Eng&Service</b> conta com profissionais qualificados para o trabalho.</p>
             </div>
           </div>
 
@@ -303,6 +153,16 @@
               </div>
               <h4>AVCB e SPDA</h4>
               <p>Somos especialistas em <b>AVCB</b> e <b>SPDA</b>, licenças que precisam ser renovadas anualmente e são obrigatórias em certos edifícios residencias e comerciais.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box iconbox-teal">
+              <div class="icon">
+                <i class='bx bxs-zap' style='color:#1880ad'></i> 
+              </div>
+              <h4>Subestações</h4>
+              <p>Precisa de um projeto ou auditoria em subestações? Fale conosco!</p>
             </div>
           </div>
 
@@ -450,14 +310,11 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <h3>Eng&Service</h3><hr>
+       <div class="social-links">
+        <a href="#" class="facebook"><i class="bx bxl-facebook" target="_blank"></i></a>
+        <a href="https://www.instagram.com/eng_services/" class="instagram"><i class="bx bxl-instagram" target="_blank"></i></a>
+        <a href="https://bit.ly/eng-service" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Eng&Service</span></strong>. Todos os direitos reservados.
