--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <div class="icon">
                 <i class='bx bxs-zap' style='color:#1880ad'></i> 
               </div>
-              <h4>Subestações</h4>
+              <h4>SUBESTAÇÕES</h4>
               <p>Precisa de um projeto ou auditoria em subestações? Fale conosco!</p>
             </div>
           </div>
